[gd_scene load_steps=6 format=3 uid="uid://fy45fj0828c8"]

[ext_resource type="Script" path="res://src/overworld/main_scene.gd" id="1_bphdg"]
[ext_resource type="Script" path="res://src/shapes/ripple.gd" id="2_r2osl"]
[ext_resource type="PackedScene" uid="uid://cqewy85ekx2sx" path="res://src/actors/player.tscn" id="3_ga725"]
[ext_resource type="AudioStream" uid="uid://bjpyi3ksy8lgm" path="res://assets/audio/water_drop.mp3" id="4_652du"]
[ext_resource type="FontFile" uid="uid://bdpbpkhnq8lny" path="res://assets/8-bit-pusab.ttf" id="5_fr5gw"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_bphdg")

[node name="OverworldLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ground" type="ColorRect" parent="OverworldLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.796078, 0.6, 1)

[node name="Water" type="ColorRect" parent="OverworldLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 768.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.756863, 0.972549, 1)

[node name="Camera2D" type="Camera2D" parent="OverworldLayer"]
offset = Vector2(960, 540)

[node name="ActorLayer" type="Node2D" parent="."]

[node name="FishingLine" type="CanvasGroup" parent="ActorLayer"]

[node name="Ripple" type="Node2D" parent="ActorLayer/FishingLine"]
script = ExtResource("2_r2osl")

[node name="Line2D" type="Line2D" parent="ActorLayer/FishingLine"]
position = Vector2(960, 712)
points = PackedVector2Array(0, 1, 0, 184)
width = 4.0
default_color = Color(0.827451, 0.827451, 0.827451, 1)

[node name="Player" parent="ActorLayer" instance=ExtResource("3_ga725")]
position = Vector2(960, 576)
scale = Vector2(0.25, 0.25)

[node name="FishBite" type="AudioStreamPlayer" parent="ActorLayer"]
stream = ExtResource("4_652du")
volume_db = -2.0

[node name="LevelBG" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.756863, 0.972549, 1)

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="HUDLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Collection" type="VFlowContainer" parent="HUDLayer/HUD"]
texture_filter = 1
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 32.0
offset_right = 576.0
offset_bottom = -888.0
grow_vertical = 2
alignment = 1

[node name="FishCount" type="Label" parent="HUDLayer/HUD/Collection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0666667, 0.145098, 0.309804, 1)
theme_override_fonts/font = ExtResource("5_fr5gw")
theme_override_font_sizes/font_size = 24
text = "Fish caught:"
vertical_alignment = 1

[node name="TreasureCount" type="Label" parent="HUDLayer/HUD/Collection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0666667, 0.145098, 0.309804, 1)
theme_override_fonts/font = ExtResource("5_fr5gw")
theme_override_font_sizes/font_size = 24
text = "Treasure:"
vertical_alignment = 1

[node name="StateLabel" type="VBoxContainer" parent="HUDLayer/HUD"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -220.0
offset_right = 60.0
offset_bottom = -153.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HUDLayer/HUD/StateLabel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_fr5gw")
theme_override_font_sizes/font_size = 28
text = "Got one!!"
horizontal_alignment = 1

[node name="StartBtn" type="Button" parent="HUDLayer/HUD/StateLabel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.721221, 1, 0.995472, 1)
theme_override_fonts/font = ExtResource("5_fr5gw")
theme_override_font_sizes/font_size = 24
text = "  Reel it in  "

[node name="NavButtons" type="VBoxContainer" parent="HUDLayer/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -219.0
offset_top = 39.0
offset_right = -44.0
offset_bottom = 158.0
grow_horizontal = 0
alignment = 1

[node name="Menu" type="Button" parent="HUDLayer/HUD/NavButtons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.721221, 1, 0.995472, 1)
theme_override_fonts/font = ExtResource("5_fr5gw")
theme_override_font_sizes/font_size = 24
text = "Menu"

[node name="Maps" type="Button" parent="HUDLayer/HUD/NavButtons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.721221, 1, 0.995472, 1)
theme_override_fonts/font = ExtResource("5_fr5gw")
theme_override_font_sizes/font_size = 24
text = "Maps"

[node name="WaitTimer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="HUDLayer/HUD/StateLabel/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="HUDLayer/HUD/NavButtons/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="HUDLayer/HUD/NavButtons/Maps" to="." method="_on_maps_pressed"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_timer_timeout"]
